--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,7 +6,9 @@
     "@types/react": "^16.9.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "typescript": "^3.6.3"
   },
   "scripts": {
