--- a/session5-hw/package.json
+++ b/session5-hw/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "my-app",
+  "name": "session5",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.9.5",
-    "@types/react-redux": "^7.1.5",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "bootstrap": "^4.3.1",
+    "formik": "^2.0.2",
+    "lodash": "^4.17.15",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
+    "redux-localstorage-simple": "^2.1.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.6.3"
   },
   "scripts": {
@@ -32,5 +35,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.144",
+    "@types/react": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
+    "@types/redux-thunk": "^2.1.0"
   }
 }
