--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "redux": "^4.0.4",
     "redux-create-reducer": "^2.0.0",
     "redux-devtools-extension": "^2.13.8",
+    "redux-localstorage-simple": "^2.1.6",
     "typescript": "^3.6.3"
   },
   "scripts": {
