--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.9.5",
+    "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
