--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,10 +6,14 @@
     "@types/react": "^16.9.5",
     "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router": "^5.1.3",
+    "@types/react-router-dom": "^5.1.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-create-reducer": "^2.0.0",
