--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/bootstrap": "^4.3.1",
+    "@types/classnames": "^2.2.9",
     "@types/react": "^16.9.5",
     "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.3",
     "@types/react-router-dom": "^5.1.3",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-modal": "^3.11.1",
